# langchain-llm-langchain-1-7-students

./: .gitignore  README.md  pyproject.toml
langchain_project/: .gitignore  IMPROVEMENTS_NEEDED.md  PROJECT_REVIEW.md  README.md  pyproject.toml
langchain_project/data_selected/: 001_질병보험_가공.xml  001_책임보험_가공.xml  001_화재보험_가공.xml  002_상해보험_가공.xml  002_손해보험_가공.xml  002_연금보험_가공.xml  002_자동차보험_가공.xml  002_질병보험_가공.xml  002_책임보험_가공.xml  002_화재보험_가공.xml  003_상해보험_가공.xml  003_손해보험_가공.xml  003_연금보험_가공.xml  003_자동차보험_가공.xml  003_질병보험_가공.xml  003_책임보험_가공.xml  003_화재보험_가공.xml  004_상해보험_가공.xml  004_손해보험_가공.xml  004_연금보험_가공.xml  004_자동차보험_가공.xml  004_질병보험_가공.xml  004_책임보험_가공.xml  004_화재보험_가공.xml  005_상해보험_가공.xml  005_손해보험_가공.xml  005_연금보험_가공.xml  005_자동차보험_가공.xml  005_질병보험_가공.xml  005_책임보험_가공.xml  005_화재보험_가공.xml  006_상해보험_가공.xml  006_손해보험_가공.xml  006_연금보험_가공.xml  006_자동차보험_가공.xml  006_질병보험_가공.xml  006_책임보험_가공.xml  006_화재보험_가공.xml  007_상해보험_가공.xml  007_손해보험_가공.xml  (+1025 more)
langchain_project/qdrant_data/: meta.json  raft_state.json
langchain_project/source/app/: app_streamlit_v2.py  run_graph.py
langchain_project/source/chains/: qa_chain.py  qa_chain_with_metrics.py
langchain_project/source/config/: settings.py
langchain_project/source/graph/: state.py
source/app/: run_qa.py
source/chains/: insurance_classifier.py  utils.py
source/config/: settings.py
source/evaluation/: judge.py  metrics.py  store.py
source/graph/: graph.py
source/ingest/: ingest.py  select_insurance_files.py
source/llm/: llm.py  prompt.py
test/source/: llm_all_topk.ipynb  llm_type_insurace.ipynb
(+36 files in other folders)
